--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ torch==2.2.1
 lightning==2.2.1
 transformers
 accelerate==0.30.1
+bitsandbytes==0.43.1
 peft==0.9.0
 jupyterlab==4.1.3
 matplotlib==3.8.3
