--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 torch==2.2.1
+tensorboard==2.17.0
 lightning==2.2.1
 transformers
+protobuf==5.27.1
+sentencepiece==0.2.0
 accelerate==0.30.1
 bitsandbytes==0.43.1
 peft==0.9.0
