--- a/resources/configs/dearing_2024/parallel/llama_fine_tuned_x2.yml
+++ b/resources/configs/dearing_2024/parallel/llama_fine_tuned_x2.yml
@@ -1,6 +1,6 @@
 # Main
 experiment_series: DEARING_2024  # <wrapper_dtype>
-experiment_id: mistral_7b_v0.3__parallel__fine_tuned__x2
+experiment_id: llama_3_8b__parallel__fine_tuned__x2
 experiments_dir_path: ./experiments/
 hf_token: &hf_token hf_
 random_seed: 42
@@ -15,7 +15,7 @@ lm_eval:
     - gsm8k
     - arc_challenge
     - mmlu
-  batch_size: 2
+  batch_size: 3
   log_samples: true
   random_seed: &random_seed 42
   numpy_random_seed: *random_seed
@@ -26,7 +26,7 @@ model:
   # Task
   dtype: ParallelCausalLMWrapper  # CausalLMWrapper | ParallelCausalLMWrapper | ResizableCausalLMWrapper
   # Model
-  pretrained_model_name_or_path: ./resources/models/mistral_7b_v0.3__parallel_x2__fine_tuning__  # mistralai/Mistral-7B-v0.3 | google/gemma-7b | meta-llama/Meta-Llama-3-8B
+  pretrained_model_name_or_path: ./resources/models/llama_3_8b__parallel_x2__fine_tuning__  # mistralai/Mistral-7B-v0.3 | google/gemma-7b | meta-llama/Meta-Llama-3-8B
   # Model kwargs
   model_kwargs:
     device_map: cuda
@@ -44,7 +44,7 @@ model:
   # Tokenizer kwargs
   tokenizer_kwargs:
     token: *hf_token
-    pad_token: </s>
+    pad_token: <|end_of_text|>
   # Wrapper specific parameters
   ## Parallel
   p_rate: 2
