--- a/resources/configs/dearing_2024/parallel/training/llama_x2.yml
+++ b/resources/configs/dearing_2024/parallel/training/llama_x2.yml
@@ -1,6 +1,6 @@
 # Main
 experiment_series: DEARING_2024  # <wrapper_dtype>_<data_set>
-experiment_id: mistral_7b_v0.3__parallel_x2__fine_tuning
+experiment_id: llama_3_8b__parallel_x2__fine_tuning
 experiments_dir_path: ./experiments/
 models_dir_path: ./resources/models/
 hf_token: &hf_token hf_
@@ -39,7 +39,7 @@ model:
   # Task
   dtype: ParallelCausalLMWrapper  # CausalLMWrapper | ParallelCausalLMWrapper | ResizableCausalLMWrapper
   # Model
-  pretrained_model_name_or_path: mistralai/Mistral-7B-v0.3  # mistralai/Mistral-7B-v0.3 | google/gemma-7b | meta-llama/Meta-Llama-3-8B
+  pretrained_model_name_or_path: meta-llama/Meta-Llama-3-8B  # mistralai/Mistral-7B-v0.3 | google/gemma-7b | meta-llama/Meta-Llama-3-8B
   # Model kwargs
   model_kwargs:
     device_map: cuda  # torch.device('cuda' if torch.cuda.is_available() else 'cpu')
@@ -63,7 +63,7 @@ model:
   # Tokenizer kwargs
   tokenizer_kwargs:
     token: *hf_token
-    pad_token: </s>
+    pad_token: <|end_of_text|>
   # Wrapper specific parameters
   ## Parallel
   p_rate: 2
