--- a/resources/configs/dearing_2024/parallel/mistral_fine_tuned_x4.yml
+++ b/resources/configs/dearing_2024/parallel/mistral_fine_tuned_x4.yml
@@ -12,7 +12,7 @@ lm_eval:
     - hellaswag
     - winogrande
     - truthfulqa_mc1
-    - gsm8k
+    # - gsm8k
     - arc_challenge
     - mmlu
   batch_size: 2
@@ -26,7 +26,7 @@ model:
   # Task
   dtype: ParallelCausalLMWrapper  # CausalLMWrapper | ParallelCausalLMWrapper | ResizableCausalLMWrapper
   # Model
-  pretrained_model_name_or_path: ./resources/models/mistral_7b_v0.3__parallel_x4__fine_tuning__  # mistralai/Mistral-7B-v0.3 | google/gemma-7b | meta-llama/Meta-Llama-3-8B
+  pretrained_model_name_or_path: ./resources/models/mistral_7b_v0.3__parallel_x4__fine_tuning__2024_06_24_20_01_16  # mistralai/Mistral-7B-v0.3 | google/gemma-7b | meta-llama/Meta-Llama-3-8B
   # Model kwargs
   model_kwargs:
     device_map: cuda
@@ -40,7 +40,7 @@ model:
   # PEFT model
   peft: true
   # Tokenizer
-  tokenizer_name_or_path:
+  tokenizer_name_or_path: mistralai/Mistral-7B-v0.3
   # Tokenizer kwargs
   tokenizer_kwargs:
     token: *hf_token
