--- a/resources/configs/dearing_2024/parallel/gemma_fine_tuned_x2.yml
+++ b/resources/configs/dearing_2024/parallel/gemma_fine_tuned_x2.yml
@@ -1,6 +1,6 @@
 # Main
 experiment_series: DEARING_2024  # <wrapper_dtype>
-experiment_id: gemma_7b__parallel
+experiment_id: gemma_7b__parallel__parallel__fine_tuned__x2
 experiments_dir_path: ./experiments/
 hf_token: &hf_token hf_
 random_seed: 42
@@ -26,7 +26,7 @@ model:
   # Task
   dtype: ParallelCausalLMWrapper  # CausalLMWrapper | ParallelCausalLMWrapper | ResizableCausalLMWrapper
   # Model
-  pretrained_model_name_or_path: google/gemma-7b  # mistralai/Mistral-7B-v0.3 | google/gemma-7b | meta-llama/Meta-Llama-3-8B
+  pretrained_model_name_or_path: ./resources/models/gemma_7b__parallel_x2__fine_tuning__2024_06_25_09_43_26  # mistralai/Mistral-7B-v0.3 | google/gemma-7b | meta-llama/Meta-Llama-3-8B
   # Model kwargs
   model_kwargs:
     device_map: cuda
