--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ torch==2.2.1
 tensorboard==2.17.0
 lightning==2.2.1
 transformers
-protobuf==5.27.1
+protobuf==4.25.3
+joblib==1.3.2
 sentencepiece==0.2.0
 accelerate==0.30.1
 bitsandbytes==0.43.1
