--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 torch==2.2.1
 tensorboard==2.17.0
 lightning==2.2.1
-transformers
+transformers==4.44.2
 protobuf==4.25.3
 joblib==1.3.2
 sentencepiece==0.2.0
